# neo4rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  change_version.bash  justfile  release.toml  tasks.txt
.cargo/: config.toml
.circleci/: config.yml
.github/workflows/: checks.yml  clean-caches.yml  create-release-pr.yml  rust.yml
ci/: Cargo.lock.min  Cargo.lock.msrv
examples/: Cargo.toml
examples/src/: lib.rs
include_snippet/: Cargo.toml
include_snippet/src/: lib.rs
integrationtests/: Cargo.toml  tests
integrationtests/tests/: configurations.rs  container.rs  dates.rs  durations.rs  example.rs  missing_properties.rs  node_property_parsing.rs  parse_time_from_result.rs  path.rs  raw_bytes.rs  relationships.rs  result_stream.rs  result_summary.rs  streams_within_a_transaction.rs  time_as_param.rs  transactions.rs  use_default_db.rs
lib/: Cargo.toml  Makefile.toml  README.md
lib/examples/: concurrent_writes.rs
lib/include/: bookmarks.rs  configurations.rs  dates.rs  datetime_as_param.rs  durations.rs  example.rs  nodes.rs  parse_datetime_from_result.rs  parse_time_from_result.rs  path.rs  points.rs  raw_bytes.rs  relationships.rs  result_stream.rs  result_summary.rs  rollback_a_transaction.rs  streaming_summary.rs  streams_within_a_transaction.rs  time_as_param.rs  transactions.rs  txn_vs_graph.rs  unbounded_relationships.rs
lib/integrationtests/: bookmarks.rs  datetime_as_param.rs  nodes.rs  parse_datetime_from_result.rs  points.rs  rollback_a_transaction.rs  txn_vs_graph.rs  unbounded_relationships.rs
lib/src/: bookmarks.rs  config.rs  connection.rs  convert.rs  errors.rs  graph.rs  lib.rs  messages.rs  pool.rs  query.rs  retry.rs  row.rs  session.rs  stream.rs  summary.rs  txn.rs  types.rs  version.rs
lib/src/auth/: mod.rs  static_client_certificate_provider.rs
lib/src/bolt/: de.rs  detail.rs  map.rs  mod.rs  packstream.rs  ser.rs  summary.rs
lib/src/bolt/packstream/: de.rs  mod.rs
lib/src/bolt/packstream/ser/: map.rs
lib/src/bolt/request/: begin.rs  commit.rs  discard.rs  extra.rs  goodbye.rs  hello.rs  mod.rs  pull.rs  reset.rs  rollback.rs  route.rs
lib/src/bolt/structs/: date.rs  datetime.rs  de.rs  duration.rs  mod.rs  node.rs  path.rs  point.rs  rel.rs  time.rs  urel.rs
lib/src/messages/: begin.rs  bye.rs  commit.rs  discard.rs  failure.rs  hello.rs  ignore.rs  pull.rs  record.rs  reset.rs  rollback.rs  route.rs  run.rs  success.rs
lib/src/packstream/: de.rs  mod.rs
lib/src/packstream/ser/: map.rs  mod.rs
lib/src/routing/: connection_registry.rs  mod.rs  routed_connection_manager.rs  routing_table_provider.rs  types.rs
lib/src/routing/load_balancing/: mod.rs  round_robin_strategy.rs
lib/src/types/: binary.rs  boolean.rs  date.rs  date_time.rs  duration.rs  float.rs  integer.rs  list.rs  map.rs  node.rs  null.rs  path.rs  point.rs  point2d.rs  point3d.rs  relation.rs  serde.rs  string.rs  time.rs  wire.rs
lib/src/types/serde/: builder.rs  cenum.rs  date_time.rs  de.rs  deser.rs  duration.rs  element.rs  error.rs  kind.rs  map.rs  mod.rs  node.rs  path.rs  point.rs  rel.rs  time.rs  typ.rs  urel.rs
lib/src/utils/: concurrent_hashmap.rs  mod.rs
lib/tests/: bookmarks.rs  configurations.rs  container.rs  dates.rs  datetime_as_param.rs  duration_deserialization.rs  durations.rs  example.rs  integration.rs  missing_properties.rs  node_property_parsing.rs  nodes.rs  parse_datetime_from_result.rs  parse_time_from_result.rs  path.rs  points.rs  raw_bytes.rs  relationships.rs  result_as_dataframe.rs  result_stream.rs  result_summary.rs  rollback_a_transaction.rs  streaming_summary.rs  streams_within_a_transaction.rs  time_as_param.rs  transactions.rs  txn_change_db.rs  txn_vs_graph.rs  unbounded_relationships.rs  use_default_db.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: connection.rs  convert.rs  convertion.rs  error.rs  errors.rs  lib.rs  main.rs  messages.rs  pool.rs  query.rs  result.rs  row.rs  stream.rs  transaction.rs  txn.rs  types.rs  version.rs
src/messages/: begin.rs  bye.rs  discard.rs  failure.rs  hello.rs  init.rs  pull.rs  record.rs  run.rs  success.rs
src/types/: boolean.rs  float.rs  integer.rs  list.rs  map.rs  node.rs  null.rs  point2d.rs  point3d.rs  relation.rs  string.rs
tests/: connection_test.rs  integration.rs
xtask/: Cargo.toml
xtask/src/: main.rs
