[package]
name = "neo4rs"
version = "0.2.1"
authors = ["John Vincent <yehohanan7@gmail.com>"]
edition = "2018"
description = "neo4j driver in rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.1"}
tokio = { version = "0.3.1", features = ["full"] }
async-stream = "0.3.0"
uuid = { version = "0.8", features = ["v4"] }
bytes = "0.5"
bb8 = "0.6.1"
async-trait = "0.1.42"
