[package]
name = "neo4rs"
version = "0.2.8"
authors = ["John Vincent <yehohanan7@gmail.com>"]
edition = "2018"
description = "neo4j driver in rust"
license = "MIT"
repository = "https://github.com/yehohanan7/neo4rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.1" }
tokio = { version = "0.3.1", features = ["full"] }
async-stream = "0.3.0"
bytes = "0.5"
async-trait = "0.1.42"
deadpool = "0.6.0"
log = "0.4"
syn = { version="1.0", features=["full", "extra-traits"]}
quote = "1.0"

[dev-dependencies]
uuid = { version = "0.8", features = ["v4"] }
