[package]
name = "neo4rs"
version = "0.8.0"
authors = [
    "Neo4j Labs <devrel@neo4j.com>",
    "John Pradeep Vincent <yehohanan7@gmail.com>",
]
edition = "2021"
description = "Rust driver for Neo4j"
license = "MIT"
repository = "https://github.com/neo4j-labs/neo4rs"
documentation = "https://docs.rs/neo4rs"
readme = "../README.md"
keywords = ["neo4j", "driver", "bolt", "cypher", "tokio"]
categories = ["database", "network-programming", "asynchronous"]
rust-version = "1.63"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
json = ["serde_json"]

[dependencies]
async-trait = "0.1.0"
backoff = { version = "0.4.0", features = ["tokio"] }
bytes = { version = "1.5.0", features = ["serde"] }
chrono-tz = "0.8.3"
delegate = "0.10.0"
futures = { version = "0.3.0" }
log = "0.4"
neo4rs-macros = { version = "0.3.0", path = "../macros" }
paste = "1.0.0"
pin-project-lite = "0.2.9"
rustls-native-certs = "0.7.1"
rustls-pemfile = "2.1.2"
serde = "1.0.0"
serde_json = { version = "1.0.0", optional = true }
thiserror = "1.0.2"
tokio = { version = "1.5.0", features = ["full"] }
url = "2.0.0"
webpki-roots = "0.26.0"

[dependencies.chrono]
version = "0.4.23"
default-features = false
features = ["std", "serde"]

[dependencies.deadpool]
version = "0.9,0"
default-features = false
features = ["managed"]

[dependencies.tokio-rustls]
version = "0.26.0"
default-features = false
features = ["tls12", "ring"]

[dev-dependencies]
pretty_env_logger = "0.4.0"
serde = { version = "1.0.185", features = ["derive"] }
serde_bytes = "0.11.0"
serde_json = "1.0.0"
serde_with = "3.0.0"
tap = "1.0.1"
testcontainers = "0.15.0"
testcontainers-modules = { version = "0.1.4", features = ["neo4j"] }
time = { version = "0.3.0", features = ["serde"] }
uuid = { version = "1.0.0", features = ["v4"] }

[dev-dependencies.lenient_semver]
version = "0.4.2"
default-features = false
features = ["version_lite"]
