[package]
name = "neo4rs"
version = "0.9.0-rc.1"
authors = [
    "Neo4j Labs <devrel@neo4j.com>",
    "John Pradeep Vincent <yehohanan7@gmail.com>",
]
edition = "2021"
description = "Rust driver for Neo4j"
license = "MIT"
repository = "https://github.com/neo4j-labs/neo4rs"
documentation = "https://docs.rs/neo4rs"
readme = "../README.md"
keywords = ["neo4j", "driver", "bolt", "cypher", "tokio"]
categories = ["database", "network-programming", "asynchronous"]
rust-version = "1.75.0"

[features]
json = ["serde_json"]
polars = ["polars_v0_43"]
polars_v0_43 = ["dep:polars"]
unstable-v1 = ["unstable-bolt-protocol-impl-v2", "unstable-result-summary"]
unstable-serde-packstream-format = []
unstable-result-summary = ["unstable-serde-packstream-format"]
unstable-bolt-protocol-impl-v2 = [
    "unstable-serde-packstream-format",
    "unstable-result-summary",
    "dep:nav-types",
    "dep:time",
]

[dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }
bytes = { version = "1.5.0", features = ["serde"] }
chrono-tz = "0.9.0"
delegate = "0.12.0"
futures = { version = "0.3.0" }
log = "0.4.0"
nav-types = { version = "0.5.2", optional = true }
neo4rs-macros = { version = "0.3.0", path = "../macros" }
paste = "1.0.0"
pin-project-lite = "0.2.9"
polars-utils = { version = "0.43.1", default-features = false }
rustls-native-certs = "0.7.1"
rustls-pemfile = "2.1.2"
serde = { version = "1.0.185", features = ["derive"] }    # TODO: eliminate derive
serde_json = { version = "1.0.0", optional = true }
thiserror = "1.0.7"
time = { version = "0.3.22", optional = true }
tokio = { version = "1.5.0", features = ["full"] }
url = "2.0.0"

[dependencies.chrono]
version = "0.4.35"
default-features = false
features = ["std", "serde"]

[dependencies.deadpool]
version = "0.12.0"
default-features = false
features = ["managed"]

[dependencies.tokio-rustls]
version = "0.26.0"
default-features = false
features = ["tls12", "ring"]

[dependencies.polars]
version = "0.43.0"
default-features = false
optional = true
features = ["rows"]

[dev-dependencies]
pretty_env_logger = "0.5.0"
serde = { version = "1.0.185", features = ["derive"] }
serde_bytes = "0.11.0"
serde_json = "1.0.0"
serde_test = "1.0.176"
serde_with = "3.0.0"
tap = "1.0.1"
test-case = "3.3.1"
testcontainers = { version = "0.20.0", features = ["blocking"] }
testcontainers-modules = { version = "0.8.0", features = ["neo4j"] }
time = { version = "0.3.0", features = ["serde"] }
uuid = { version = "1.0.0", features = ["v4"] }

[dev-dependencies.lenient_semver]
version = "0.4.2"
default-features = false
features = ["version_lite"]
