[package]
name = "neo4rs"
version = "0.9.0-rc.6"
authors = [
    "Neo4j Labs <devrel@neo4j.com>",
    "John Pradeep Vincent <yehohanan7@gmail.com>",
]
edition = "2021"
description = "Rust driver for Neo4j"
license = "MIT"
repository = "https://github.com/neo4j-labs/neo4rs"
documentation = "https://docs.rs/neo4rs"
readme = "../README.md"
keywords = ["neo4j", "driver", "bolt", "cypher", "tokio"]
categories = ["database", "network-programming", "asynchronous"]
rust-version = "1.75.0"

[features]
json = ["serde_json"]
unstable-v1 = ["unstable-bolt-protocol-impl-v2", "unstable-result-summary"]
unstable-serde-packstream-format = []
unstable-result-summary = ["unstable-serde-packstream-format"]
unstable-bolt-protocol-impl-v2 = [
    "unstable-serde-packstream-format",
    "unstable-result-summary",
    "dep:nav-types",
    "dep:time",
]

[dependencies]
backon = { version = "1.5.1", default-features = false, features = [
    "tokio-sleep",
] }
bytes = { version = "1.5.0", features = ["serde"] }
chrono-tz = "0.10.0"
dashmap = "6.1.0"
delegate = "0.13.0"
futures = { version = "0.3.0" }
log = "0.4.0"
nav-types = { version = "0.5.2", optional = true }
neo4rs-macros = { version = "0.3.0", path = "../macros" }
pastey = "0.1.0"
pin-project-lite = "0.2.9"
rustls = { version = "0.23.16", features = ["tls12", "ring"] }
rustls-native-certs = "0.7.1"
rustls-pemfile = "2.1.2"
serde = { version = "1.0.185", features = ["derive"] }    # TODO: eliminate derive
serde_json = { version = "1.0.0", optional = true }
thiserror = "1.0.7"
time = { version = "0.3.22", optional = true }
tokio = { version = "1.5.0", features = ["full"] }
url = "2.0.0"

[dependencies.chrono]
version = "0.4.35"
default-features = false
features = ["std", "serde"]

[dependencies.deadpool]
version = "0.12.0"
default-features = false
features = ["managed"]

[dependencies.tokio-rustls]
version = "0.26.0"
default-features = false
features = ["tls12", "ring"]


[dev-dependencies]
aws-lc-rs = "1.10.0"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.185", features = ["derive"] }
serde_bytes = "0.11.0"
serde_json = "1.0.0"
serde_test = "1.0.176"
serde_with = "3.0.0"
tap = "1.0.1"
test-case = "3.3.1"
testcontainers = { version = "0.23.0", features = ["blocking"] }
testcontainers-modules = { version = "0.11.0", features = ["neo4j"] }
time = { version = "0.3.0", features = ["serde"] }
uuid = { version = "1.0.0", features = ["v4"] }

[dev-dependencies.lenient_semver]
version = "0.4.2"
default-features = false
features = ["version_lite"]
