[package]
name = "neo4rs-macros"
version = "0.2.1"
authors = ["John Pradeep Vincent <yehohanan7@gmail.com>"]
description = "macros used by neo4rs"
edition = "2021"
license = "MIT"
repository = "https://github.com/yehohanan7/neo4rs"
rust-version = "1.60"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
