[package]
name = "neo4rs-macros"
version = "0.3.0"
authors = ["Neo4j Labs <devrel@neo4j.com>", "John Pradeep Vincent <yehohanan7@gmail.com>"]
edition = "2021"
description = "Macros used by neo4rs"
license = "MIT"
repository = "https://github.com/neo4j-labs/neo4rs"
rust-version = "1.63"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
